--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,18 +10,18 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-497
+dock_hsplit_3=-627
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/godot-git-plugin/git_plugin.gdextension")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://GameData/", "res://GameData/MenuSystem/", "res://GameData/DesignData/", "res://addons/", "res://addons/godot-git-plugin/")
+dock_filesystem_selected_paths=PackedStringArray("res://oompaloompa.txt")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://GameData/", "res://GameData/MenuSystem/", "res://GameData/DesignData/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (3)"
+dock_5="Inspector,Node,History,Commit (6)"
 
 [EditorNode]
 
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://GameData/DesignData/Design.MenuData.json", "res://GameData/DesignData/Design.MenuItemData.json", "res://Scenes/main.gd", "res://GameData/MenuSystem/MenuOptions.MainMenu.txt"]
-selected_script="res://Scenes/main.gd"
+open_scripts=["res://GameData/DesignData/Design.MenuData.json", "res://GameData/DesignData/Design.MenuItemData.json", "res://GrumbleTest.txt", "res://Scenes/main.gd", "res://GameData/MenuSystem/MenuOptions.MainMenu.txt", "res://oompaloompa.txt"]
+selected_script="res://oompaloompa.txt"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
