--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,24 +10,24 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-627
+dock_hsplit_3=-656
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://oompaloompa.txt")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://GameData/", "res://GameData/MenuSystem/", "res://GameData/DesignData/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (6)"
+dock_5="Inspector,Node,History,Commit (3)"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/main.tscn")
 current_scene="res://Scenes/main.tscn"
-center_split_offset=0
+center_split_offset=-555
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
