--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_selected_paths=PackedStringArray("res://Scenes/main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://GameData/", "res://GameData/MenuSystem/", "res://GameData/DesignData/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (6)"
+dock_5="Inspector,Node,History,Commit (2)"
 
 [EditorNode]
 
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://GameData/DesignData/Design.MenuData.json", "res://GameData/DesignData/Design.MenuItemData.json", "res://GrumbleTest.txt", "res://Scenes/main.gd", "res://GameData/MenuSystem/MenuOptions.MainMenu.txt", "res://oompaloompa.txt"]
-selected_script="res://Scenes/main.gd"
+selected_script="res://oompaloompa.txt"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
