--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,11 +17,11 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://GameData/", "res://GameData/MenuSystem/", "res://GameData/DesignData/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Global/", "res://GameData/", "res://GameData/MenuSystem/", "res://GameData/DesignData/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (2)"
+dock_5="Inspector,Node,History,Commit (5)"
 
 [EditorNode]
 
@@ -30,12 +30,12 @@ current_scene="res://Scenes/main.tscn"
 center_split_offset=-555
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=14
 
 [ScriptEditor]
 
-open_scripts=["res://GameData/DesignData/Design.MenuData.json", "res://GameData/DesignData/Design.MenuItemData.json", "res://GrumbleTest.txt", "res://Scenes/main.gd", "res://GameData/MenuSystem/MenuOptions.MainMenu.txt", "res://oompaloompa.txt"]
-selected_script="res://oompaloompa.txt"
+open_scripts=["res://GameData/DesignData/Design.MenuData.json", "res://GameData/DesignData/Design.MenuItemData.json", "res://GrumbleTest.txt", "res://Scenes/main.gd", "res://GameData/MenuSystem/MenuOptions.MainMenu.txt", "res://Scenes/Global/menu_system.gd"]
+selected_script="res://Scenes/Global/menu_system.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
